Setup Sonarqube and scanning

--- a/microk8s/jobs/bdd_automation/sonar_scanner.yaml
+++ b/microk8s/jobs/bdd_automation/sonar_scanner.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: sonar-scanner
+  namespace: sonarqube
 spec:
   parallelism: 1
   ttlSecondsAfterFinished: 300
